Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8426

mysqlbinlog: "Corrupted replication event was detected. Not printing the value" with binlog-row-image=minimal

    XMLWordPrintable

Details

    • 10.1.9-1, 10.1.9-2

    Description

      It's related to MDEV-6877 changes.

      Test case (for reproducing, not for including into the test suite!)

      # Run with --mysqld=--binlog-row-image=minimal
       
      --source include/have_log_bin.inc
      --source include/have_binlog_format_row.inc
       
      CREATE TABLE t1 (pk INT PRIMARY KEY, f1 INT, f2 INT, f3 INT, f4 INT, f5 INT, f6 INT, f7 INT, f8 INT);
      INSERT INTO t1 VALUES (10, 1, 2, 3, 4, 5, 6, 7, 8);
      DELETE FROM t1;
       
      --let $binlog = query_get_value(SHOW MASTER STATUS, File, 1)
      --let $datadir = `SELECT @@datadir`
       
      FLUSH BINARY LOGS;
       
      --exec $MYSQL_BINLOG --verbose --base64-output=DECODE-ROWS $datadir/$binlog
       
      DROP TABLE t1;

      Partial output from 10.1 commit 302bf7c4664b904482ecc133476e822d497b114d

      # at 739
      #150705  2:12:29 server id 1  end_log_pos 777 	GTID 0-1-3
      /*!100001 SET @@session.gtid_seq_no=3*//*!*/;
      BEGIN
      /*!*/;
      # at 777
      # at 827
      #150705  2:12:29 server id 1  end_log_pos 827 	Table_map: `test`.`t1` mapped to number 30
      #150705  2:12:29 server id 1  end_log_pos 862 	Delete_rows: table id 30 flags: STMT_END_F
      ### DELETE FROM `test`.`t1`
      ### WHERE
      ###   @1=***Corrupted replication event was detected. Not printing the value***
      # at 862
      #150705  2:12:29 server id 1  end_log_pos 931 	Query	thread_id=4	exec_time=0	error_code=0
      SET TIMESTAMP=1436051549/*!*/;
      COMMIT
      /*!*/;
      # at 931

      Notes:

      • FLUSH LOGS is unrelated, it just allows to avoid warnings;
      • the number of fields seems to be important.

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5h
                  5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.