sql/log_event.cc
@@ -2161,6 +2161,7 @@ my_b_write_sint32_and_uint32(IO_CACHE *file, int32 si, uint32 ui)
   @param[out] typestr_length   Size of typestr
   
   @retval   - number of bytes scanned from ptr.
+              Except in case of NULL, in which case we return 1 to indicate ok
 */
 
 static size_t
@@ -2193,41 +2194,57 @@ log_event_print_value(IO_CACHE *file, const uchar *ptr,
   switch (type) {
   case MYSQL_TYPE_LONG:
     {
+      strmake(typestr, "INT", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       int32 si= sint4korr(ptr);
       uint32 ui= uint4korr(ptr);
       my_b_write_sint32_and_uint32(file, si, ui);
-      strmake(typestr, "INT", typestr_length);
       return 4;
     }
 
   case MYSQL_TYPE_TINY:
     {
+      strmake(typestr, "TINYINT", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       my_b_write_sint32_and_uint32(file, (int) (signed char) *ptr,
                                   (uint) (unsigned char) *ptr);
-      strmake(typestr, "TINYINT", typestr_length);
       return 1;
     }
 
   case MYSQL_TYPE_SHORT:
     {
+      strmake(typestr, "SHORTINT", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       int32 si= (int32) sint2korr(ptr);
       uint32 ui= (uint32) uint2korr(ptr);
       my_b_write_sint32_and_uint32(file, si, ui);
-      strmake(typestr, "SHORTINT", typestr_length);
       return 2;
     }
   
   case MYSQL_TYPE_INT24:
     {
+      strmake(typestr, "MEDIUMINT", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       int32 si= sint3korr(ptr);
       uint32 ui= uint3korr(ptr);
       my_b_write_sint32_and_uint32(file, si, ui);
-      strmake(typestr, "MEDIUMINT", typestr_length);
       return 3;
     }
 
   case MYSQL_TYPE_LONGLONG:
     {
+      strmake(typestr, "LONGINT", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       char tmp[64];
       size_t length;
       longlong si= sint8korr(ptr);
@@ -2239,7 +2256,6 @@ log_event_print_value(IO_CACHE *file, const uchar *ptr,
         longlong10_to_str((longlong) ui, tmp, 10);
         my_b_printf(file, " (%s)", tmp);        
       }
-      strmake(typestr, "LONGINT", typestr_length);
       return 8;
     }
 
@@ -2247,6 +2263,11 @@ log_event_print_value(IO_CACHE *file, const uchar *ptr,
     {
       uint precision= meta >> 8;
       uint decimals= meta & 0xFF;
+      my_snprintf(typestr, typestr_length, "DECIMAL(%d,%d)",
+                  precision, decimals);
+      if (!ptr)
+        goto return_null;
+
       uint bin_size= my_decimal_get_binary_size(precision, decimals);
       my_decimal dec;
       binary2my_decimal(E_DEC_FATAL_ERROR, (uchar*) ptr, &dec,
@@ -2255,30 +2276,34 @@ log_event_print_value(IO_CACHE *file, const uchar *ptr,
       char buff[DECIMAL_MAX_STR_LENGTH + 1];
       decimal2string(&dec, buff, &length, 0, 0, 0);
       my_b_write(file, (uchar*)buff, length);
-      my_snprintf(typestr, typestr_length, "DECIMAL(%d,%d)",
-                  precision, decimals);
       return bin_size;
     }
 
   case MYSQL_TYPE_FLOAT:
     {
+      strmake(typestr, "FLOAT", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       float fl;
       float4get(fl, ptr);
       char tmp[320];
       sprintf(tmp, "%-20g", (double) fl);
       my_b_printf(file, "%s", tmp); /* my_snprintf doesn't support %-20g */
-      strmake(typestr, "FLOAT", typestr_length);
       return 4;
     }
 
   case MYSQL_TYPE_DOUBLE:
     {
       double dbl;
+      strmake(typestr, "DOUBLE", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       float8get(dbl, ptr);
       char tmp[320];
       sprintf(tmp, "%-.20g", dbl); /* strmake doesn't support %-20g */
       my_b_printf(file, tmp, "%s");
-      strcpy(typestr, "DOUBLE");
       return 8;
     }
   
@@ -2286,33 +2311,46 @@ log_event_print_value(IO_CACHE *file, const uchar *ptr,
     {
       /* Meta-data: bit_len, bytes_in_rec, 2 bytes */
       uint nbits= ((meta >> 8) * 8) + (meta & 0xFF);
+      my_snprintf(typestr, typestr_length, "BIT(%d)", nbits);
+      if (!ptr)
+        goto return_null;
+
       length= (nbits + 7) / 8;
       my_b_write_bit(file, ptr, nbits);
-      my_snprintf(typestr, typestr_length, "BIT(%d)", nbits);
       return length;
     }
 
   case MYSQL_TYPE_TIMESTAMP:
     {
+      strmake(typestr, "TIMESTAMP", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       uint32 i32= uint4korr(ptr);
       my_b_printf(file, "%d", i32);
-      strmake(typestr, "TIMESTAMP", typestr_length);
       return 4;
     }
 
   case MYSQL_TYPE_TIMESTAMP2:
     {
+      my_snprintf(typestr, typestr_length, "TIMESTAMP(%d)", meta);
+      if (!ptr)
+        goto return_null;
+
       char buf[MAX_DATE_STRING_REP_LENGTH];
       struct timeval tm;
       my_timestamp_from_binary(&tm, ptr, meta);
       int buflen= my_timeval_to_str(&tm, buf, meta);
       my_b_write(file, (uchar*)buf, buflen);
-      my_snprintf(typestr, typestr_length, "TIMESTAMP(%d)", meta);
       return my_timestamp_binary_length(meta);
     }
 
   case MYSQL_TYPE_DATETIME:
     {
+      strmake(typestr, "DATETIME", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       ulong d, t;
       uint64 i64= uint8korr(ptr); /* YYYYMMDDhhmmss */
       d= (ulong) (i64 / 1000000);
@@ -2321,47 +2359,59 @@ log_event_print_value(IO_CACHE *file, const uchar *ptr,
       my_b_printf(file, "%04d-%02d-%02d %02d:%02d:%02d",
                   (int) (d / 10000), (int) (d % 10000) / 100, (int) (d % 100),
                   (int) (t / 10000), (int) (t % 10000) / 100, (int) t % 100);
-      strmake(typestr, "DATETIME", typestr_length);
       return 8;
     }
 
   case MYSQL_TYPE_DATETIME2:
     {
+      my_snprintf(typestr, typestr_length, "DATETIME(%d)", meta);
+      if (!ptr)
+        goto return_null;
+
       char buf[MAX_DATE_STRING_REP_LENGTH];
       MYSQL_TIME ltime;
       longlong packed= my_datetime_packed_from_binary(ptr, meta);
       TIME_from_longlong_datetime_packed(&ltime, packed);
       int buflen= my_datetime_to_str(&ltime, buf, meta);
       my_b_write_quoted(file, (uchar *) buf, buflen);
-      my_snprintf(typestr, typestr_length, "DATETIME(%d)", meta);
       return my_datetime_binary_length(meta);
     }
 
   case MYSQL_TYPE_TIME:
     {
+      strmake(typestr, "TIME",  typestr_length);
+      if (!ptr)
+        goto return_null;
+
       int32 tmp= sint3korr(ptr);
       int32 i32= tmp >= 0 ? tmp : - tmp;
       const char *sign= tmp < 0 ? "-" : "";
       my_b_printf(file, "'%s%02d:%02d:%02d'",
                   sign, i32 / 10000, (i32 % 10000) / 100, i32 % 100, i32);
-      strmake(typestr, "TIME",  typestr_length);
       return 3;
     }
 
   case MYSQL_TYPE_TIME2:
     {
+      my_snprintf(typestr, typestr_length, "TIME(%d)", meta);
+      if (!ptr)
+        goto return_null;
+
       char buf[MAX_DATE_STRING_REP_LENGTH];
       MYSQL_TIME ltime;
       longlong packed= my_time_packed_from_binary(ptr, meta);
       TIME_from_longlong_time_packed(&ltime, packed);
       int buflen= my_time_to_str(&ltime, buf, meta);
       my_b_write_quoted(file, (uchar *) buf, buflen);
-      my_snprintf(typestr, typestr_length, "TIME(%d)", meta);
       return my_time_binary_length(meta);
     }
 
   case MYSQL_TYPE_NEWDATE:
     {
+      strmake(typestr, "DATE", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       uint32 tmp= uint3korr(ptr);
       int part;
       char buf[11];
@@ -2383,39 +2433,50 @@ log_event_print_value(IO_CACHE *file, const uchar *ptr,
       *pos--= (char) ('0'+part%10); part/=10;
       *pos=   (char) ('0'+part);
       my_b_printf(file , "'%s'", buf);
-      strmake(typestr, "DATE", typestr_length);
       return 3;
     }
     
   case MYSQL_TYPE_DATE:
     {
+      strmake(typestr, "DATE", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       uint i32= uint3korr(ptr);
       my_b_printf(file , "'%04d:%02d:%02d'",
                   (int)(i32 / (16L * 32L)), (int)(i32 / 32L % 16L),
                   (int)(i32 % 32L));
-      strmake(typestr, "DATE", typestr_length);
       return 3;
     }
   
   case MYSQL_TYPE_YEAR:
     {
+      strmake(typestr, "YEAR", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       uint32 i32= *ptr;
       my_b_printf(file, "%04d", i32+ 1900);
-      strmake(typestr, "YEAR", typestr_length);
       return 1;
     }
   
   case MYSQL_TYPE_ENUM:
     switch (meta & 0xFF) {
     case 1:
-      my_b_printf(file, "%d", (int) *ptr);
       strmake(typestr, "ENUM(1 byte)", typestr_length);
+      if (!ptr)
+        goto return_null;
+
+      my_b_printf(file, "%d", (int) *ptr);
       return 1;
     case 2:
       {
+        strmake(typestr, "ENUM(2 bytes)", typestr_length);
+      if (!ptr)
+        goto return_null;
+
         int32 i32= uint2korr(ptr);
         my_b_printf(file, "%d", i32);
-        strmake(typestr, "ENUM(2 bytes)", typestr_length);
         return 2;
       }
     default:
@@ -2425,31 +2486,46 @@ log_event_print_value(IO_CACHE *file, const uchar *ptr,
     break;
     
   case MYSQL_TYPE_SET:
-    my_b_write_bit(file, ptr , (meta & 0xFF) * 8);
     my_snprintf(typestr, typestr_length, "SET(%d bytes)", meta & 0xFF);
+      if (!ptr)
+        goto return_null;
+
+    my_b_write_bit(file, ptr , (meta & 0xFF) * 8);
     return meta & 0xFF;
   
   case MYSQL_TYPE_BLOB:
     switch (meta) {
     case 1:
+      strmake(typestr, "TINYBLOB/TINYTEXT", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       length= *ptr;
       my_b_write_quoted(file, ptr + 1, length);
-      strmake(typestr, "TINYBLOB/TINYTEXT", typestr_length);
       return length + 1;
     case 2:
+      strmake(typestr, "BLOB/TEXT", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       length= uint2korr(ptr);
       my_b_write_quoted(file, ptr + 2, length);
-      strmake(typestr, "BLOB/TEXT", typestr_length);
       return length + 2;
     case 3:
+      strmake(typestr, "MEDIUMBLOB/MEDIUMTEXT", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       length= uint3korr(ptr);
       my_b_write_quoted(file, ptr + 3, length);
-      strmake(typestr, "MEDIUMBLOB/MEDIUMTEXT", typestr_length);
       return length + 3;
     case 4:
+      strmake(typestr, "LONGBLOB/LONGTEXT", typestr_length);
+      if (!ptr)
+        goto return_null;
+
       length= uint4korr(ptr);
       my_b_write_quoted(file, ptr + 4, length);
-      strmake(typestr, "LONGBLOB/LONGTEXT", typestr_length);
       return length + 4;
     default:
       my_b_printf(file, "!! Unknown BLOB packlen=%d", length);
@@ -2460,10 +2536,16 @@ log_event_print_value(IO_CACHE *file, const uchar *ptr,
   case MYSQL_TYPE_VAR_STRING:
     length= meta;
     my_snprintf(typestr, typestr_length, "VARSTRING(%d)", length);
+    if (!ptr)
+      goto return_null;
+
     return my_b_write_quoted_with_length(file, ptr, length);
 
   case MYSQL_TYPE_STRING:
     my_snprintf(typestr, typestr_length, "STRING(%d)", length);
+    if (!ptr)
+      goto return_null;
+
     return my_b_write_quoted_with_length(file, ptr, length);
 
   case MYSQL_TYPE_DECIMAL:
@@ -2484,6 +2566,9 @@ log_event_print_value(IO_CACHE *file, const uchar *ptr,
   }
   *typestr= 0;
   return 0;
+
+return_null:
+  return my_b_write(file, (uchar*) "NULL", 4) ? 0 : 1;
 }
 
 
@@ -2512,25 +2597,27 @@ Rows_log_event::print_verbose_one_row(IO_CACHE *file, table_def *td,
   uint null_bit_index= 0;
   char typestr[64]= "";
   
-  value+= (m_width + 7) / 8;
+  /*
+    Skip metadata bytes which gives the information about nullabity of master
+    columns. Master writes one bit for each affected column.
+   */
+
+  value+= (bitmap_bits_set(cols_bitmap) + 7) / 8;
   
   my_b_printf(file, "%s", prefix);
   
   for (size_t i= 0; i < td->size(); i ++)
   {
+    size_t size;
     int is_null= (null_bits[null_bit_index / 8] 
                   >> (null_bit_index % 8))  & 0x01;
 
     if (bitmap_is_set(cols_bitmap, i) == 0)
       continue;
     
-    if (is_null)
+    my_b_printf(file, "###   @%d=", static_cast<int>(i + 1));
+    if (!is_null)
     {
-      my_b_printf(file, "###   @%lu=NULL", (ulong)i + 1);
-    }
-    else
-    {
-      my_b_printf(file, "###   @%lu=", (ulong)i + 1);
       size_t fsize= td->calc_field_size((uint)i, (uchar*) value);
       if (value + fsize > m_rows_end)
       {
@@ -2539,23 +2626,20 @@ Rows_log_event::print_verbose_one_row(IO_CACHE *file, table_def *td,
         value+= fsize;
         return 0;
       }
-      size_t size= log_event_print_value(file, value,
-                                         td->type(i), td->field_metadata(i),
-                                         typestr, sizeof(typestr));
-      if (!size)
-        return 0;
-
-      value+= size;
     }
+    if (!(size= log_event_print_value(file,is_null? NULL: value,
+                                      td->type(i), td->field_metadata(i),
+                                      typestr, sizeof(typestr))))
+      return 0;
+
+    if (!is_null)
+      value+= size;
 
     if (print_event_info->verbose > 1)
     {
       my_b_write(file, (uchar*)" /* ", 4);
 
-      if (typestr[0])
-        my_b_printf(file, "%s ", typestr);
-      else
-        my_b_printf(file, "type=%d ", td->type(i));
+      my_b_printf(file, "%s ", typestr);
       
       my_b_printf(file, "meta=%d nullable=%d is_null=%d ",
                   td->field_metadata(i),
@@ -11093,7 +11177,7 @@ void Table_map_log_event::pack_info(Protocol *protocol)
 
 
 #ifdef MYSQL_CLIENT
-void Table_map_log_event::print(FILE *, PRINT_EVENT_INFO *print_event_info)
+void Table_map_log_event::print(FILE *file, PRINT_EVENT_INFO *print_event_info)
 {
   if (!print_event_info->short_form)
   {
@@ -11104,6 +11188,7 @@ void Table_map_log_event::print(FILE *, PRINT_EVENT_INFO *print_event_info)
                 ((m_flags & TM_BIT_HAS_TRIGGERS_F) ?
                  " (has triggers)" : ""));
     print_base64(&print_event_info->body_cache, print_event_info, TRUE);
+    copy_event_cache_to_file_and_reinit(&print_event_info->head_cache, file);
   }
 }
 #endif
